# ceo-business-simulator

./: 1_data_import.ipynb  AGENTS.md  README.md  skills-lock.json
back_research/: README.md  pyproject.toml
back_research/aprkapxkf/: README.md
back_research/aprkapxkf/artifacts/: xg_model.pkl  xg_model.pkl2
back_research/aprkapxkf/datasets/: ecommerce_company_client_churn_data.csv
back_research/aprkapxkf/notebooks/: EDA.ipynb  EDA_sanghyunlee.ipynb  sanghyun.ipynb  sanghyun_E_commerce_model_Training.ipynb  sanghyun_ecommerce_company_client_churn_data_Training.ipynb
back_research/catboost_info/: catboost_training.json  time_left.tsv
back_research/catboost_info/learn/: events.out.tfevents
back_research/myungbin/: eda.ipynb  modeling.ipynb  preprocessing.ipynb  test.py
back_research/myungbin/Ecommerce_Customer/: eda.ipynb  test.py
back_research/myungbin/Packlin/: EDA.ipynb
back_research/myungbin/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
back_research/myungbin/data/: churn_preprocessed.csv
back_research/myungbin/models/: model_lr.pkl  model_xgb.pkl
back_research/src/aprkapxkf/: sanghyun.ipynb
back_research/wonbeenlee/datasets/: saas_subscription_churn
back_research/wonbeenlee/notebooks/: README.md  model_branch_grouping.md
back_research/youn/: E_commerce_model_Training.ipynb  E_commerce_model_Training.py  zenodo.ipynb
back_research/youn/catboost_info/: time_left.tsv
back_research/전하영/: EDA.ipynb  Preprocessing.ipynb
be/: README.md  pyproject.toml
be/src/be/: __init__.py  app.py  (+7 more)
be/tests/: test_smoke.py
(+112 files in other folders)
