[project]
name = "back-research"
version = "0.1.0"
description = "Research workspace for simulations, experiments, and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost",
    "imbalanced-learn",
    "ipykernel",
    "jupyterlab",
    "lightgbm",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "torch",
    "xgboost",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.uv]
package = false
