[project]
name = "be"
version = "0.1.0"
description = "Backend workspace for the retention strategy simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.14.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]",
    "xgboost>=3.2.0",
]

[project.scripts]
be = "be:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
